@@ -1,6 +1,3 @@
-[submodule "modules/MCcubed"]
-	path = modules/MCcubed
-	url = https://github.com/pcubillos/MCcubed
 [submodule "modules/eclipse"]
 	path = modules/eclipse
 	url = https://github.com/pcubillos/eclipse
