@@ -2,3 +2,4 @@ numpy>=1.8.1
 scipy>=0.13.3
 matplotlib>=1.3.1
 astropy>=3.1
+mc3>=3.0.5
