@@ -411,3 +411,8 @@ breaking.
 
 Got setup.py up to speed, puppies is now installable.
 
+*****
+
+Removed MCcubed submodule.
+Added mc3 requirement.
+
